--- a/WebApp/Views/UserChat/Index.cshtml
+++ b/WebApp/Views/UserChat/Index.cshtml
@@ -89,6 +89,7 @@
         .clsHide {
             display: none !important;
         }
+     
     </style>
 </head>
 <body id="video">
@@ -134,7 +135,7 @@
                 <li class="clsCallActive clsHide"><a href="#" id="aMudeAudio" class="video_pos"><img src="@Url.Content("~/Content/images/sound.png")" alt=""></a></li>
                 <li class="clsCallActive clsHide"><a href="#" id="aUnMudeAudio" class="video_pos_h"><img src="@Url.Content("~/Content/images/sound_h.png")" alt=""></a></li>
 
-                <li class="clsCallActive clsHide"><a href="#" id="aExpandVideo" class="video_pos"><img src="@Url.Content("~/Content/images/half_screen.png")" alt=""></a></li>
+                <li class="clsCallActive clsHide"><a href="#" id="aExpandVideo" class="video_pos" onclick="toggleFullScreen()"><img src="@Url.Content("~/Content/images/half_screen.png")" alt=""></a></li>
                 <li class="clsCallActive clsHide"><a href="#" id="aShrinkExpandVideo" class="video_pos_h"><img src="@Url.Content("~/Content/images/full_screen.png")" alt=""></a></li>
 
                 <li class="clsCallActive clsHide"><a href="#" class="video_pos" id="video-message"><i class="fa fa-comments comments" aria-hidden="true"></i></a></li>
@@ -477,6 +478,42 @@
     </script>
 
     <script src="@Url.Content("~/Scripts/custom.min.js")"></script>
+    <script>
+        // mozfullscreenerror event handler
+        function errorHandler() {
+            alert('mozfullscreenerror');
+        }
+        document.documentElement.addEventListener('mozfullscreenerror', errorHandler, false);
 
+        // toggle full screen
+        function toggleFullScreen() {
+            alert('fullscreen');
+            if (!document.fullscreenElement &&    // alternative standard method
+                !document.mozFullScreenElement && !document.webkitFullscreenElement) {  // current working methods
+                if (document.documentElement.requestFullscreen) {
+                    document.documentElement.requestFullscreen();
+                } else if (document.documentElement.mozRequestFullScreen) {
+                    document.documentElement.mozRequestFullScreen();
+                } else if (document.documentElement.webkitRequestFullscreen) {
+                    document.documentElement.webkitRequestFullscreen(Element.ALLOW_KEYBOARD_INPUT);
+                }
+            } else {
+                if (document.cancelFullScreen) {
+                    document.cancelFullScreen();
+                } else if (document.mozCancelFullScreen) {
+                    document.mozCancelFullScreen();
+                } else if (document.webkitCancelFullScreen) {
+                    document.webkitCancelFullScreen();
+                }
+            }
+        }
+
+        // keydown event handler
+        document.addEventListener('keydown', function (e) {
+            if (e.keyCode == 13 || e.keyCode == 70) { // F or Enter key
+                toggleFullScreen();
+            }
+        }, false);
+    </script>
 </body>
 </html>
