--- a/WebApp/Views/Appointment/Index.cshtml
+++ b/WebApp/Views/Appointment/Index.cshtml
@@ -51,9 +51,9 @@
                     <div class="x_content">
                         <div id="divReschedule" class="table-responsive">
 
-                            @{
+                            @*@{
                                 Html.RenderAction("PartialReschedule", "Appointment");
-                            }
+                            }*@
 
 
                         </div>
@@ -67,9 +67,9 @@
                     <div class="x_content">
                         <div id="divPending" class="table-responsive">
 
-                            @{
+                            @*@{
                                 Html.RenderAction("PartialPending", "Appointment");
-                            }
+                            }*@
 
 
                         </div>
@@ -170,7 +170,7 @@
     }
 
     var currentTab = "";
-   
+
     var fetchDate="";
     var _objAppointment = {};
     var _doctorName="";
@@ -178,11 +178,27 @@
     var appdate = "";
     $(document).ready(function () {
         currentTab = "U";
-       
+
     });
     function setTab(cTab) {
         currentTab = cTab;
-       
+        if (cTab == 'U') {
+           $("#divUpcoming").load('@Url.Action("PartialUpcoming", "Appointment")', function () {
+                callback();
+            });
+
+        }
+        if(cTab=='R')
+        {
+            $("#divReschedule").load('@Url.Action("PartialReschedule", "Appointment")', function () {
+                callback();
+            });
+        }
+        if (cTab == 'P') {
+             $("#divPending").load('@Url.Action("PartialPending", "Appointment")', function () {
+                callback();
+             });
+        }
     }
 
 
@@ -194,10 +210,10 @@
     }
 
     function completeConsult(editappid,cid) {
-      
+
                //showLoader();
                 var objCRR = {};
-                
+
                 objCRR["userID"] = '@SessionHandler.UserInfo.userId';
                 objCRR["appID"] = editappid;
                 $.ajax({
@@ -206,10 +222,10 @@
                     data: objCRR,
                     dataType: 'json',
                     success: function (result) {
-                        
+
                         //Reload container
                         if (result.Message != undefined) {
-                           
+
                             new PNotify({ title: 'Error', text: "Consultation "+" "+result.Message, type: 'error', styling: 'bootstrap3' });
                             $('#myModal4').modal('hide');
                             //stopLoader();
@@ -217,10 +233,10 @@
                         else {
                             new PNotify({ title: 'Success', text: "Consultation is completed successfully.", type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                             $('#myModal4').modal('hide');
-                           
+
                             reloadContainer(function () {
 
-                                
+
                                 //Stop displaying loader
                                 //stopLoader();
                             });
@@ -237,8 +253,8 @@
 
     }
 
-   
-    
+
+
 
     //Reschedule App
 
@@ -247,7 +263,7 @@
 
         _objAppointment["appID"] = appID;// $("#RAppID").val();
         _objAppointment["appType"] = currentTab;
-        
+
         _objAppointment["userID"] = '@SessionHandler.UserInfo.userId';
         $.ajax({
             url: '@Url.Action("RescheduleApp", "Appointment")',
@@ -337,7 +353,7 @@
     });
     $('#fetchdate').on('apply.daterangepicker', function (ev, picker) {
         //do something, like clearing an input
-        
+
         fetchTimings( $('#fetchdate').val());
 
     });
@@ -383,7 +399,7 @@
     }
 
     function showDoctorTimings(doctorID,appID,appDate) {
-        
+
         var cappDate = appDate.split("/");
         var f = new Date(cappDate[2], cappDate[1] - 1, cappDate[0]);
         $("#RAppID").val(appID);
@@ -401,12 +417,12 @@
         }
 
         today = dd + '/' + mm + '/' + yyyy;
-        
+
         $('#fetchdate').val(today);
         var _objSearch = {};
         //appdate = formatDate(new Date(appDate), "dd/MM/yyyy");
         _objSearch["appDate"] = appDate;
-        
+
         $('#fetchdate').val(appDate);
         debugger;
         //var d1 = new Date(appDate.ToString());
@@ -455,7 +471,7 @@
         //alert($('#RAppID').val());
         rescheduleApp($('#RAppID').val());
         return false;
-       
+
     }
 
     function reloadContainer(callback) {
@@ -475,11 +491,11 @@
     function reloadModelContainer(callback) {
         debugger;
         var appid=$("#pvappid").val();
-      
+
         $("#myModalContent").load('@Url.Action("ViewAppDetails", "Appointment")?appID='+appid, function () {
             callback();
         });
-       
+
     }
     $(".scheduler").addClass("current-page");
 </script> 
