--- a/WebApp/Views/UserChat/Index.cshtml
+++ b/WebApp/Views/UserChat/Index.cshtml
@@ -64,6 +64,7 @@
     <script src="@Url.Content("~/Scripts/jquery.signalR-2.2.1.min.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/pnotify.js")"></script>
     <script src="@Url.Content("~/signalr/hubs")"></script>
+    <script src="@Url.Content("~/Scripts/UserChat.js")"></script>
 
     <style type="text/css">
         #divPrimaryVideo {
@@ -403,7 +404,54 @@
                      return false;
                 }
             });
+           
+            var cUrl = "@Url.Action("LoadSOAP", "UserChat")?consultID=" + consultId;
+            $.post(cUrl, function (oResp) {
+                if (oResp.Message == undefined) {
+                    debugger;
+                    $("#txtDoctorNoteSubjective").val(oResp.SOAP.subjective);
+                    $("#txtDoctorNoteObjective").val(oResp.SOAP.objective);
+                    $("#txtDoctorNoteAssessment").val(oResp.SOAP.assessment);
+                    $("#txtDoctorNotePlans").val(oResp.SOAP.plans);
+                    for (var i = 0; i < oResp.SOAP.chat.length;i++)
+                    {
+                        if (oResp.SOAP.chat[i].sender == '@SessionHandler.UserInfo.Email') {
+                            //my message <img src='/Content/images/img.jpg' alt=''>
+                            var oMsgHtml = "";
+                            oMsgHtml = "<div class='inbox-item  m-b-10'><div class='talk-bubble tri-right right-in margin-r'><div class='talktext'><p>";
+                            oMsgHtml += oResp.SOAP.chat[i].message;
+                            oMsgHtml += " <span> ";
+                            oMsgHtml += getFormattedTime(new Date(parseInt(oResp.SOAP.chat[i].cd.replace(/\D/g, ''))));//getFormattedTime(showLocal(oResp.SOAP.chat[i].cd));
+                            oMsgHtml += " </span></p> </div> </div> </div>";
+                            $("#divMessageContainer").append(oMsgHtml);
+                        } else {
+                            //their message<img src='/Content/images/img.jpg' alt=''>
+                            var oMsgHtml = "";
+                            oMsgHtml += "<div class='sent-item text-right m-b-10'><div class='talk-bubble tri-right left-in'><div class='talktext'> <p>";
+                            oMsgHtml += oResp.SOAP.chat[i].message;
+                            oMsgHtml += " <span>";
+                            oMsgHtml += getFormattedTime(new Date(parseInt(oResp.SOAP.chat[i].cd.replace(/\D/g, ''))));//getFormattedTime(showLocal(oResp.SOAP.chat[i].cd));
+                            oMsgHtml += "</span></p> </div> </div> </div>";
 
+                            //if (!$("#messages-sec").is(":visible")) {
+                            //    showVideoMessages();
+                            //}
+                            $("#divMessageContainer").append(oMsgHtml);
+                        }
+                    }
+                    for (var i = 0; i < oResp.SOAP.rosItems.length; i++)
+                    {
+                        $("label:contains(" + oResp.SOAP.rosItems[i].systemItemName + ")").children().addClass('checked');
+                    }
+                    
+                    
+                    
+                } else {
+                    new PNotify({ title: 'Error', text: oResp.message, type: 'error', styling: 'bootstrap3' });
+                    
+                }
+
+            });
             $('#tblROS').on('ifChecked', 'input', function (event) {
                 var curElem = $(this);
 
@@ -474,7 +522,16 @@
                 }
             }
         });
-
+        function getFormattedTime(date) {
+            var hours = date.getHours();
+            var minutes = date.getMinutes();
+            var ampm = hours >= 12 ? 'pm' : 'am';
+            hours = hours % 12;
+            hours = hours ? hours : 12; // the hour '0' should be '12'
+            minutes = minutes < 10 ? '0' + minutes : minutes;
+            var strTime = hours + ':' + minutes + ' ' + ampm;
+            return strTime;
+        }
     </script>
 
     <script src="@Url.Content("~/Scripts/custom.min.js")"></script>
@@ -487,7 +544,7 @@
 
         // toggle full screen
         function toggleFullScreen() {
-            alert('fullscreen');
+            //alert('fullscreen');
             if (!document.fullscreenElement &&    // alternative standard method
                 !document.mozFullScreenElement && !document.webkitFullscreenElement) {  // current working methods
                 if (document.documentElement.requestFullscreen) {
