--- a/WebApp/Views/Appointment/DoctorProfileView.cshtml
+++ b/WebApp/Views/Appointment/DoctorProfileView.cshtml
@@ -24,16 +24,24 @@
                                         </div>
                                         <a class="hrt" href="#" style="color: #5A738E; left: 10px;"><span class="fa fa-heart-o" aria-hidden="true"></span></a>
                                         <a class="hrt1" href="#" style="color: #5A738E; left: 10px;"><span class="fa fa-heart" aria-hidden="true"></span></a>
-                                        <i class="popup-circle fa fa-circle" aria-hidden="true" style="color: red;"></i>
+                                        @*<i class="popup-circle fa fa-circle" aria-hidden="true" style="color: red;"></i>*@
                                         <h2 class="text-center">@Model.FirstName @Model.LastName <br> <small style="color: #73879C;">(@Model.GetAge())</small></h2>
-                                        <p class="text-center m-0" style="color: green;">Available for Call</p>
+                                        @*<p class="text-center m-0" style="color: green;">Available for Call</p>*@
                                         <p class="ratings m-t-0 m-b-5" style="text-align: center;">
 
-                                            <a href="#"><span class="fa fa-star"></span></a>
-                                            <a href="#"><span class="fa fa-star"></span></a>
-                                            <a href="#"><span class="fa fa-star"></span></a>
-                                            <a href="#"><span class="fa fa-star"></span></a>
-                                            <a href="#"><span class="fa fa-star-o"></span></a>
+                                            
+                                            @if (Model.reviewStar > 0)
+                                            {
+                                            for (var i = 0; i < Model.reviewStar; i++)
+                                            {
+                                            <a href='javascript:void(0);' data-toggle="modal" data-target="#myModal9" class="thumbnail-col-inner" data-id="@Model.DoctorID" id="@Model.DoctorID" onclick=showReviews(@Model.DoctorID);><span class='fa fa-star'></span></a>
+                                            }
+                                            for (var i = 0; i < 5 - Model.reviewStar; i++)
+                                            {
+                                            <a href='javascript:void(0);'><span class='fa fa-star-o'></span></a>
+
+                                            }
+                                            }
                                         </p>
                                         <p class="m-tb-15 text-center">
                                             <i class="fa fa-language" aria-hidden="true"></i>
@@ -128,9 +136,62 @@
         </div>
     </div>
 </div><!--/.modal body-->
+ <div class="modal fade" id="myModal9" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content" style="width: 500px;margin-left: 280px;">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="timingsmodaltitle">Consultation Reviews</h4>
+                </div><!--/.modal header-->
 
+                <div class="modal-body text-left">
+                    <div class="row" id="docrow">
+                        <input type="text" style="display:none" id="consultID">
+
+                        <form class="form-horizontal form-label-left" style="margin-top: -20px;">
+                            <div class="col-sm-offset-4 col-sm-4">
+                                <div class="xdisplay_inputx form-group has-feedback">
+
+                                    <span id="inputSuccess2Status" class="sr-only">(success)</span>
+                                </div>
+                            </div>
+                        </form>
+                        <form class="form-horizontal form-label-left">
+                            <div class="col-sm-12 text-center" id="rdiv">
+                                
+                            </div>
+                            
+                            <button style="margin-right: 210px;margin-top: 6px;" type="button" class="btn btn-primary btn-sm pull-right" id="ok" onclick="$('#myModal9').modal('hide')">OK</button>
+                        </form>
+
+                    </div><!--/.modal body-->
+                </div>
+            </div>
+        </div>
+    </div><!--doctor reviews-->
 <script>
+    function showReviews(docid) {
 
+        var did = docid;//$("#pvdocid").val();
+
+        
+            var cUrl = "@Url.Action("GetDoctorReviews", "Consultation")?doctorID=" + did;
+            $.ajax({
+                url: cUrl,
+                type: 'POST',
+                dataType: 'html',
+                cache: false,
+                success: function (html) {
+                    $("#myModal9").find("#rdiv").html(html);
+                   
+                },
+                error: function(){
+                    new PNotify({ title: 'Error', text: ViewBag.Error , type: 'error', styling: 'bootstrap3' });
+                }
+            });
+        
+
+    }
         function myMap() {
 
             var lat = '@Model.Latitude';
